# DeployGuard

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PATH.md  Dockerfile  Makefile  PRD.md  PROGRESS.md  README.md  deployguard.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
Formula/: deployguard.rb
deployguard/: cli.py  config.py  manifest.py  server.py
deployguard/cost/: __init__.py  infracost.py  parser.py  reporter.py  rules.py
deployguard/engine/: __init__.py  audit.py  deploy.py  ecr.py  metrics.py  precheck.py  rollout.py
deployguard/guard/: __init__.py  engine.py  models.py  reporter.py  rules.py  runner.py  tools.py
deployguard/llm/: __init__.py  base.py  bedrock.py  lmstudio.py
deployguard/provision/: aws.py  local.py
deployguard/scaffold/: init.py
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
k8s/: deployment.yaml  service.yaml
scripts/: install.sh  update-formula-sha.sh
skill/: SKILL.md
templates/: Dockerfile.j2  deployguard.yaml.j2
templates/app/: main.py.j2  requirements.txt.j2
templates/k8s/: deployment.yaml.j2  service.yaml.j2  serviceaccount.yaml.j2
tests/: test_audit.py  test_config.py  test_cost.py  test_deploy.py  test_ecr.py  test_guard.py  test_llm.py  test_metrics.py  test_precheck.py  test_provision_aws.py  test_rollout.py  test_smoke_e2e.py  test_templates.py
