[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployguard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "jinja2>=3",
    "sqlalchemy>=2",
    "kubernetes>=29",
    "boto3>=1.34",
    "requests>=2.31",
    "pyyaml>=6",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
dg = "deployguard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deployguard*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires k3d and docker (deselect with '-m not integration')",
]
